--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Hola mundo Daniel </title>
+    <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
-    <h5>Hola mundo</h5>
+    <div class="panel">
+        <div class="img">
+            <img src="perfil.jpg" alt="">
+        </div>
+        <div class="informacion">
+            <div class="informacion-texto">
+            <h1>Perfil</h1>
+            <h2>Daniel Medina</h2>
+            <p> Estoy en 6 ciclo tengo 22 años, aspiro obtener nuevos conocimientos
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti 
+                repudiandae aliquid soluta, cumque voluptatem veniam ad veritatis laboriosam nemo quos similique modi reprehenderit, accusamus ex aliquam rem magni! Voluptatem, ea.
+            </p>
+        </div>
+        </div>
+
+    </div>
   </body>
 </html>
