--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Hola mundo Daniel </title>
-    <link rel="stylesheet" href="https://github.com/dani117m/dani117m.github.io/estilos.css">
+    <link rel="stylesheet" href="estilos.css" type="text">
   </head>
   <body>
     <div class="panel">
